--- a/AutoEvepraisal/Popup.xaml
+++ b/AutoEvepraisal/Popup.xaml
@@ -5,10 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoEvepraisal"
         mc:Ignorable="d"
-        Title="MainWindow" Height="140" Width="280" WindowStyle="None" WindowStartupLocation="CenterScreen">
+        Title="AutoEvepraisal" Height="140" Width="280" WindowStyle="None" Topmost="True" ResizeMode="NoResize" ShowInTaskbar="False">
     <Grid>
         <Border BorderThickness="2" BorderBrush="Black" Background="#FFC9C994">
-            <TextBlock x:Name="textBox" Text="Test" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="53.333" />
+            <Grid>
+                <TextBlock Text="Appraisal Results" VerticalAlignment="Top" HorizontalAlignment="Center" FontSize="24" FontWeight="Bold" Margin="0,10,0,0" />
+                <TextBlock Text="Sell:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="21.333" Margin="70,47,149,55" FontFamily="Verdana" />
+                <TextBlock x:Name="sellValue" Text="1.0B" FontSize="21.333" Margin="123,47,0,55" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" Width="107" />
+                <TextBlock Text="Buy:" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="21.333" Margin="69,78,148,24" FontFamily="Verdana" />
+                <TextBlock x:Name="buyValue" Text="1.0B" FontSize="21.333" Margin="124,78,0,24" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" Width="106" />
+            </Grid>
         </Border>
     </Grid>
 </Window>
